# Anchor-Embedding

./: .gitignore  KURE.md  README.md  pyproject.toml
data/: build_sft.ipynb  load_rlhn.ipynb
experiments/: mteb_eval.py  run_stage_I.py  run_stage_II.py  run_stage_I_qwen3.py
llm2vec/: __init__.py  experiment_utils.py  llm2vec.py  llm2vec_q2d_d2q.py
llm2vec/dataset/: KoEnQPData.py  __init__.py  utils.py
stage2_SFT/: losses.py  train.py
train_configs/baseline/: MetaLlama3.1_8b_baseline_stage2.json  MetaLlama3.2_1b_baseline_stage2.json  MetaLlama3.2_3b_baseline_stage2.json  Qwen2.5_1.5b_baseline_stage2.json
train_configs/stage_I/: MetaLlama3.1_8b_q2d_d2q.json  MetaLlama3.2_1b_q2d_d2q.json  MetaLlama3.2_3b_q2d_d2q.json  Qwen2.5_1.5b_q2d_d2q.json  Qwen3_0.6b_q2d_d2q.json
train_configs/stage_II/: MetaLlama3.1_8b_stage1_2000steps_stage2.json  MetaLlama3.2_1b_stage1_2000steps_stage2.json  MetaLlama3.2_3b_stage1_2000steps_stage2.json  Qwen2.5_1.5b_stage1_2000steps_stage2.json
train_scripts/: train.sh  train_stage2.sh
