[project]
name = "anchor-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "===3.10.12"
dependencies = [
    "datasets>=4.5.0",
    "faiss-gpu>=1.7.2",
    "fire>=0.7.1",
    "flash-attn>=2.8.3",
    "hf-transfer>=0.1.9",
    "ipykernel>=7.2.0",
    "jsonlines>=4.0.0",
    "muon-optimizer",
    "nltk>=3.9.2",
    "numpy<2.0",
    "nvitop>=1.6.2",
    "pylate>=1.3.4",
    "sentence-transformers[train]>=5.1.1",
    "setproctitle>=1.3.7",
    "tiktoken>=0.12.0",
    "torch==2.8.0",
    "transformers>=4.55.0",
    "vllm>=0.2.5",
    "wandb>=0.24.0",
]

[tool.uv.sources]
faiss-gpu = { url = "https://github.com/kyamagu/faiss-wheels/releases/download/v1.7.3/faiss_gpu-1.7.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
